# xaudiolib

./: .gitignore  CMakeLists.txt  README.md
include/: AudioManager.h
include/util/: config.h  utils.h
includes/glinclude/: glcore.h
lib/: ncmdump  ncmdump-linux  ncmdump-macos
src/: main.cpp
src/api/: XAudioEngin.h  XAudioManager.cpp  XAudioManager.h
src/api/cpp/: XAudioEngin.cpp  XAudioManager.cpp
src/config/: config.cpp  config.h
src/engin/: AudioEngin.cpp  AudioEngin.h  AudioManager.cpp  AudioManager.h  Sound.cpp  Sound.h
src/engin/codec/: coder.cpp  coder.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h
src/engin/device/: indevice.cpp  indevice.h  outdevice.cpp  outdevice.h
src/engin/mix/: AudioOrbit.cpp  AudioOrbit.h  mixer.cpp  mixer.h
src/engin/sdl/: rbuffer.cpp  rbuffer.h  xmicrophone.cpp  xmicrophone.h  xplayer.cpp  xplayer.h
src/engin/util/: ncm.h  utils.h
src/gpu/gl/: fragmentshader.glsl.frag  glheaders.h  vertexshader.glsl.vert
src/gpu/gl/shader/: shader.cpp  shader.h
src/log/: colorful-log.h  colorful_log.cpp
src/logger/: logger.cpp  logger.h
